# palimem

./: .gitignore  .npmignore  Dockerfile  LICENSE  README.md  package.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  close-shipped-issues.yml  fix-issue-titles.yml  main.yml  set-repo-topics.yml
adapters/hermes/: README.md  ai-memory.config.sample.json  pyproject.toml  run_validation_bridge.py  smoke-hermes-bridge.py
adapters/hermes/ai_memory_hermes/: __init__.py  provider.py
app/: README.md  STARTUP-CONTRACT.md  connect_codex.py  connect_common.py  connect_copilot.py  connect_cursor.py  connect_gemini.py  connect_vscode.py  connect_windsurf.py  export_memory.py  hook_remember.py  hook_search.py  import_markdown.py  package-lock.json  package.json  pyproject.toml  review_memory.py  run_consolidation.py  run_stdio_server.py
app/memory_service/: __init__.py  audit.py  consolidation.py  context_fencing.py  control.py  domain.py  errors.py  fleet.py  graph.py  pii.py  profile_engine.py  reflection.py  retention.py  server.py  service.py  storage.py
app/scripts/: ai-memory.js
benchmarks/: README.md  _lib.py  agent_tasks.py  latency_sweep.py  persona_recall.py  run_benchmarks.py
docs/: README.md  RELEASES.md  interop.md  okf-bridge.md  positioning.md
dogfood/: MEMORY.md  README.md  USER.md  automated_probe.py  probes.json  run_automated.sh  setup.sh
integrations/: run_readiness.sh
pipelines/: README.md  cd.yml  ci.yml
spec/: README.md  integrations.yaml
tests/: STARTUP-CONTRACT.md  TEST-SUITE.md  __init__.py  run_validation.py
(+64 files in other folders)
